[package]
name = "send_kaspa_transaction"
version = "0.1.0"
edition = "2024"

[dependencies]
kaspa-addresses = { git = "https://github.com/wigwagwent/rusty-kaspa", branch = "stable" }
kaspa-bip32 = { git = "https://github.com/wigwagwent/rusty-kaspa", branch = "stable" }
kaspa-wallet-core = { git = "https://github.com/wigwagwent/rusty-kaspa", branch = "stable" }
tokio = { version = "1", features = ["full"] }
kaspa-wrpc-client = { git = "https://github.com/wigwagwent/rusty-kaspa", branch = "stable" }
dotenv = "0.15.0"