[package]
name = "kasia-interface"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
# Not a protocol feature. Its in here to demonstrate the functionality. Disabled by defualt 
phone = []
default = []

[dependencies]
hex = { workspace = true }
thiserror = { workspace = true }
kbe-seed-parser = { workspace = true }
#cipher = { Workspace = true }
kaspa-bip32 = { workspace = true }
base64 = { workspace = true }

kaspa-addresses = { workspace = true }
kaspa-wallet-core = { workspace = true }
chacha20poly1305 = { workspace = true }
k256 = { workspace = true }
sha2 = { workspace = true }
secp256k1 = { workspace = true }
wasm-bindgen = { workspace = true }
kaspa-wallet-keys = { workspace = true }
# needed for randomness
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
kaspa-wrpc-client = { workspace = true }
