[package]
name = "kbe-seed-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kbe-utils = { workspace = true }
kaspa-bip32 = { workspace = true }
kaspa-addresses = { workspace = true }
kaspa-wrpc-client = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
