[package]
name = "kbe-transactions"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
kaspa-addresses = { workspace = true }
kaspa-wallet-core = { workspace = true }
kaspa-wrpc-client = { workspace = true }
kaspa-consensus-core = { workspace = true }
kaspa-bip32 = { workspace = true }
tokio = { workspace = true }

kbe-utils = { workspace = true }
kbe-kas-client = { workspace = true }
kbe-seed-parser = { workspace = true }