[package]
name = "send-kasia-broadcast"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kaspa-addresses = { workspace = true }
kaspa-wallet-core = { workspace = true }
kaspa-wrpc-client = { workspace = true }
tokio = { workspace = true }

# Workspace packages
kbe-utils = { workspace = true }
kbe-seed-parser = { workspace = true }
kasia-interface = { workspace = true }
