[package]
name = "send-kasia-handshake"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
kaspa-wallet-core ={ workspace = true }

# Workspace packages
kbe-kas-client = { workspace = true }
kbe-seed-parser = { workspace = true }
kbe-transactions = { workspace = true }
kasia-interface = { workspace = true }
