[package]
name = "send_kasia_broadcast"
version = "0.1.0"
edition = "2024"

[dependencies]
kaspa-addresses = { git = "https://github.com/wigwagwent/rusty-kaspa", rev = "b8ea20b7" }
kaspa-wallet-core = { git = "https://github.com/wigwagwent/rusty-kaspa", rev = "b8ea20b7" }
kaspa-wrpc-client = { git = "https://github.com/wigwagwent/rusty-kaspa", rev = "b8ea20b7" }
tokio = { version = "1", features = ["full"] }

# Workspace Specific Packages
kbe_utils = { path = "../kbe_utils" }
kbe_seed_parser = { path = "../kbe_seed_parser" }
kasia_interface = { path = "../kasia_interface" }
