[package]
name = "utxo_splitter"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
kaspa-wallet-core ={ workspace = true }
kaspa-wrpc-client = { workspace = true }
kaspa-addresses = { workspace = true }
kaspa-bip32 = { workspace = true }

kbe-kas-client = { workspace = true }
kbe-seed-parser = { workspace = true }
kbe-transactions = { workspace = true }
